# ci-agent

./: README.md  pyproject.toml
ci_agent/: __init__.py  agent.py  cli.py  detector.py
